--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,11 +4,12 @@ services:
     image: postgres:15-alpine
     restart: always
     environment:
-      POSTGRES_USER: ${DB_USER:-postgres}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
-      POSTGRES_DB: ${DB_NAME:-kenocalefont}
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin123
+      POSTGRES_DB: kenocalefont
+      POSTGRES_HOST_AUTH_METHOD: trust
     ports:
-      - "${DB_PORT:-5432}:5432"
+      - "5434:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
